# esp32-weather

./: .gitignore  Cargo.toml  cfg.toml.example  run.sh  sdkconfig.defaults
.cargo/: config.toml
src/: config.rs  display.rs  http.rs  main.rs  net.rs  owm_api.rs  task.rs  wifi.rs
src/chart/: axis.rs  bar.rs  line.rs  mod.rs  scalable.rs
src/display/: manager.rs  mod.rs
src/icons/: mod.rs
src/icons/i128x128/: air_filter_128x128.rs  battery_0_bar_0deg_128x128.rs  battery_0_bar_180deg_128x128.rs  battery_0_bar_270deg_128x128.rs  battery_0_bar_90deg_128x128.rs  battery_1_bar_0deg_128x128.rs  battery_1_bar_180deg_128x128.rs  battery_1_bar_270deg_128x128.rs  battery_1_bar_90deg_128x128.rs  battery_2_bar_0deg_128x128.rs  battery_2_bar_180deg_128x128.rs  battery_2_bar_270deg_128x128.rs  battery_2_bar_90deg_128x128.rs  battery_3_bar_0deg_128x128.rs  battery_3_bar_180deg_128x128.rs  battery_3_bar_270deg_128x128.rs  battery_3_bar_90deg_128x128.rs  battery_4_bar_0deg_128x128.rs  battery_4_bar_180deg_128x128.rs  battery_4_bar_270deg_128x128.rs  battery_4_bar_90deg_128x128.rs  battery_5_bar_0deg_128x128.rs  battery_5_bar_180deg_128x128.rs  battery_5_bar_270deg_128x128.rs  battery_5_bar_90deg_128x128.rs  battery_6_bar_0deg_128x128.rs  battery_6_bar_180deg_128x128.rs  battery_6_bar_270deg_128x128.rs  battery_6_bar_90deg_128x128.rs  battery_alert_0deg_128x128.rs  battery_alert_180deg_128x128.rs  battery_alert_270deg_128x128.rs  battery_alert_90deg_128x128.rs  battery_charging_full_0deg_128x128.rs  battery_charging_full_180deg_128x128.rs  battery_charging_full_270deg_128x128.rs  battery_charging_full_90deg_128x128.rs  battery_full_0deg_128x128.rs  battery_full_180deg_128x128.rs  battery_full_270deg_128x128.rs  (+1003 more)
src/icons/i160x160/: air_filter_160x160.rs  battery_0_bar_0deg_160x160.rs  battery_0_bar_180deg_160x160.rs  battery_0_bar_270deg_160x160.rs  battery_0_bar_90deg_160x160.rs  battery_1_bar_0deg_160x160.rs  battery_1_bar_180deg_160x160.rs  battery_1_bar_270deg_160x160.rs  battery_1_bar_90deg_160x160.rs  battery_2_bar_0deg_160x160.rs  (+1033 more)
src/owm/: api.rs  icons.rs  model.rs
src/wifi/: mod.rs
(+7301 files in other folders)
